####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = adfpp cgnspp

EXTRA_DIST = cgnspp.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO ar-sun ar-mips configure.ac Makefile.in aclocal.m4

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign

